# l2r

./: .gitignore  README.md  pyproject.toml
.cursor/rules/: code_quality.mdc  configuration.mdc  docstrings.mdc  logging.mdc  neural_networks.mdc  package_management.mdc  project_structure.mdc
config/model/: cvrp.yaml  tsp.yaml
config/training/: default.yaml  distributed.yaml
l2r/config/: config.yaml
l2r/data/: cvrp_dataset.py
l2r/l2r/data/: __init__.py  tsp_dataset.py
l2r/l2r/models/: __init__.py  attention.py  l2r_module.py
l2r/l2r/utils/: __init__.py  static_reduction.py
l2r/models/: construction_model.py  reduction_model.py
scripts/: test_l2r.py  train.py
tests/: test.py
